--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
     language: java
     script:
-    - ls
+          - ls
+	      - git clone https://github.com/makiyo5566/repo2.git
+          - git clone git@github.com:makiyo5566/repo2.git
+	      - apt-get install ssh
     branches:  
         only:  
             - master  
