--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
           - git clone git@github.com:makiyo5566/repo2.git
           - apt-get install ssh
           - git clone https://github.com/makiyo5566/repo2.git
+          - sudo apt-get install ssh
     branches:  
         only:  
             - master  
