--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@
           - apt-get install ssh
           - git clone https://github.com/makiyo5566/repo2.git
           - sudo apt-get install ssh
+          - date
     branches:  
         only:  
             - master  
