--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
     language: java
-    key: qwertyuiop
+    env:
+       - key=qwertyuiop
     script:
           - echo ${key}
           - git clone git@github.com:makiyo5566/repo2.git
