--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
 - apt-get install ssh
 - git clone https://github.com/makiyo5566/repo2.git
 - sudo apt-get install ssh
+- cat abc.txt
 - date
 branches:
   only:
