--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 - ls
 - ll
 - cat abc.txt
-- sudo apt-get install crul
+- sudo apt-get install curl
 - curl http://www.centos.org
 - date
 branches:
