--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
 - sudo sh -c 'echo deb http://pkg.jenkins-ci.org/debian binary/ > /etc/apt/sources.list.d/jenkins.list'
 - sudo apt-get update -y
 - sudo apt-get install jenkins -y
+- curl http://localhost:8080/
 - curl http://localhost:8080/jenkins
 branches:
   only:
