--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - sudo apt-get update -y
 - sudo apt-get install jenkins -y
 - ls /etc/init.d/
-- /etc/init.d/jenkins start
+- sudo /etc/init.d/jenkins start
 - curl http://localhost:8080/
 - curl http://localhost:8080/jenkins
 branches:
