--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
 - sudo apt-get install jenkins -y
 - ls /etc/init.d/
 - sudo /etc/init.d/jenkins start
+- sleep 20s
 - curl http://localhost:8080/
 - curl http://localhost:8080/jenkins
 branches:
