--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ script:
 - unzip MvcMusicStore-v3.0.zip
 - cd MvcMusicStore-v3.0
 - cat readme.txt
+- tar xvf ccc.tar
+- cd ccc
+- cat cde.txt
 branches:
   only:
   - master
@@ -36,4 +39,4 @@ notifications:
   - chiayulu@iii.org.tw
 before_install:
 - openssl aes-256-cbc -K $encrypted_10ce75b6f30d_key -iv $encrypted_10ce75b6f30d_iv
-  -in abc.txt.enc -out abc.txt -d
+  -in ccc.tar.enc -out ccc.tar -d
